--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 soring.datasource.name=test
-spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=hrhk
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
