--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
-spring.mvc.prefix=/views/jsp
-spring.mvc.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/views/jsp/
+spring.mvc.view.suffix=.jsp
 
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 soring.datasource.name=test
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=hrhk
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 spring.jpa.show-sql: true
